# hwgi_nemotron

./: .env.example  .gitignore  README.md  ecosystem.config.cjs  package.json  personafit_presentation.html  personafit_report.html  pnpm-lock.yaml  pnpm-workspace.yaml
agent-guide/: GUIDE.md  PROJECT.md  SESSION.md
apps/api/: main.py  openapi.json  pyproject.toml
apps/api/models/: schemas.py  survey.py
apps/api/prompts/: abtest_company.md  abtest_strategy.md  commentary.md  persona_opinion.md  report.md  selling_points.md  survey_response.md
apps/api/routes/: abtest.py  abtests.py  analyses.py  analyze.py  dataset.py  extract.py  segments.py  simulate.py  survey_progress.py  survey_questions_import.py  survey_report.py  survey_responses.py  survey_run.py  surveys.py
apps/api/scripts/: generate_openapi.py
apps/api/services/: abtest_llm.py  abtest_persistence.py  answer_cache.py  commentary.py  comparison.py  dataset_stats.py  embed_cache.py  llm.py  opinions.py  persistence.py  persona_search.py  question_parser.py  scoring.py  segment_repo.py  simulation.py  store.py  survey_engine.py  survey_repo.py  survey_run.py  text_extractor.py
data/: analyses.jsonl  simulations.jsonl
docs/: VALIDATION.json  VALIDATION.md  VALIDATION_5cases.md  VALIDATION_8cases_before.md  VALIDATION_8cases_final.md  VALIDATION_STORY.md  VALIDATION_before.json  VALIDATION_before.md  personafit-executive-slides.html  personafit-executive.html  personafit-report.html  personafit-slides.html
logs/: embed-v2.pid
scripts/: backfill_commentaries.py  dump_personas_full.py  (+4 more)
(+76 files in other folders)
