[project]
name = "personafit-api"
version = "0.1.0"
description = "PersonaFit FastAPI 백엔드 — 상품 분석 및 페르소나 매칭"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.9",
    "python-dotenv>=1.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "supabase>=2.8",
    "tenacity>=9.0",
    "httpx>=0.27",
    # 데이터 처리
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17",
    # 파일 텍스트 추출
    "pypdf>=5.0",
    "python-docx>=1.1",
    "python-multipart>=0.0.9",
    "pyhwp>=0.1b15",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "reportlab>=4.5.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
